# GenoAI-Pathogenicity-Engine

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml  test.yaml
docs/: conf.py  index.md
src/genoai_pathogenicity_engine/: __init__.py  app.py  main.py  mcp.py  models.py
src/genoai_pathogenicity_engine/tools/: __init__.py  analyser.py
tests/: test_app.py  test_data.json
